# Freesend

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  auth.config.ts  auth.ts  env.mjs  next.config.js  package.json  pnpm-lock.yaml
.github/workflows/: blank.yml
actions/: update-tenant.ts  update-user-name.ts  update-user-role.ts
app/(auth)/: layout.tsx
app/(docs)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
app/(protected)/: layout.tsx
components/: dropdown-radio.tsx  report-nav.tsx  sub-nav.tsx  todays-task-alert.tsx  util.ts
components/content/: CodeTabs.tsx  mdx-components.tsx
components/dashboard/: dashboard-charts.tsx  project-switcher.tsx
components/docs/: search.tsx  sidebar-nav.tsx
components/forms/: tenant-name-form.tsx  user-auth-form.tsx
components/layout/: dashboard-sidebar.tsx  mobile-nav.tsx  mode-toggle.tsx  navbar.tsx  page-header.tsx  site-footer.tsx  user-account-nav.tsx  user-profile-section.tsx
components/shared/: icons.tsx  (+1 more)
config/: dashboard.ts  docs.ts  marketing.ts  site.ts
hooks/: use-neon-effects.ts
lib/: api-key.ts  apiKeyUtil.ts  dashboard-utils.ts  email.ts  emails.ts  pwd.ts  session.ts  smtp-config.ts  user.ts  utils.ts
prisma/: schema.prisma
sdk/python/: README.md  pyproject.toml  setup.py  test_attachment_only.py  test_real_email.py  test_simple.py
sdk/python/examples/: basic_email.py  email_with_attachment.py
sdk/python/freesend/: __init__.py  client.py  exceptions.py  types.py
sdk/python/tests/: test_client.py
styles/: globals.css
types/: index.d.ts  next-auth.d.ts
(+69 files in other folders)
